--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,10 @@
 buildscript {
     repositories {
-        maven { url 'http://maven.aliyun.com/nexus/content/repositories/goole'}
+        maven { url 'https://maven.aliyun.com/repository/google'}
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/'}
         maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter'}
-        maven { url 'http://maven.aliyun.com/nexus/content/groups/public'}
-        mavenCentral()
-        google()
+//        mavenCentral()
+//        google()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.0'
@@ -13,27 +13,31 @@ buildscript {
 
 allprojects{
     repositories {
-        maven { url 'http://maven.aliyun.com/nexus/content/repositories/goole'}
+        maven { url 'https://maven.aliyun.com/repository/google'}
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/'}
         maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter'}
-        maven { url 'http://maven.aliyun.com/nexus/content/groups/public'}
-        mavenCentral()
-        google()
+//        mavenCentral()
+//        google()
     }
 }
 apply plugin: 'com.android.application'
 
 dependencies {
+    implementation 'com.android.support:appcompat-v7:25.2.1'
+    implementation 'com.android.support.constraint:constraint-layout:2.0.4'
     compile fileTree(include: '*.jar', dir: 'libs')
-//    implementation fileTree(include: '*.jar', dir: 'libs')
-    compile 'com.android.support:support-v4:21.0.0'
-//    implementation 'com.android.support:support-v4:21.0.0'
+    compile 'com.android.support:support-v4:25.0.0'
+
 }
 
 android {
 //    compileSdkVersion 25
-    compileSdkVersion 21
-//    buildToolsVersion "28.0.2"
-    buildToolsVersion '28.0.2'
+    compileSdkVersion 29
+    buildToolsVersion "29.0.0"
+    defaultConfig{
+        targetSdkVersion 29
+    }
+//    buildToolsVersion "21.1.1"
 
     sourceSets {
         main {
@@ -58,5 +62,14 @@ android {
         // by a similar customization.
         debug.setRoot('build-types/debug')
         release.setRoot('build-types/release')
+    }
+}
+allprojects {
+    repositories {
+        jcenter()
+        maven {
+            url "https://jitpack.io"
+        }
+        google() //新添加的  解决3.2版本aapt问题
     }
 }
