--- a/build.gradle
+++ b/build.gradle
@@ -25,8 +25,10 @@ apply plugin: 'com.android.application'
 dependencies {
     implementation 'com.android.support:appcompat-v7:25.2.1'
     implementation 'com.android.support.constraint:constraint-layout:2.0.4'
-    compile fileTree(include: '*.jar', dir: 'libs')
-    compile 'com.android.support:support-v4:25.0.0'
+//    compile fileTree(include: '*.jar', dir: 'libs')
+//    compile 'com.android.support:support-v4:25.0.0'
+    implementation fileTree(include: '*.jar', dir: 'libs')
+    implementation 'com.android.support:support-v4:25.0.0'
 
 }
 
